후원정보를 수정합니다.

--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -12,7 +12,7 @@ license:
   link_to_work: https://www.womenandwarmuseum.net/
   createor_of_work: 팀두루미
   link_to_creator_profile: https://durumi.io
-  year_of_creation: 2022
+  year_of_creation: 2023
 
 featuredImages:
   - image1.png
@@ -25,7 +25,7 @@ footer:
   팩스: 02-332-5256
   주소: 서울특별시 마포구 월드컵북로 11길 20
   사업자등록번호: 219-82-61946
-  박물관후원계좌: KB국민은행 069137-04-021905 (예금주 / 전쟁과여성인권박물관) 
+  박물관후원계좌:
   이메일: museum@womenandwar.net
   url: https://www.womenandwarmuseum.net/
   fb: https://www.facebook.com/warwomenmuseum/
