관람안내 정보를 수정합니다. (한,영)

--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -18,7 +18,8 @@ featuredImages:
   - image1.png
   - image2.jpg
 
-bookingNaver: https://booking.naver.com/booking/6/bizes/596312
+#2023년4월4일 구글폼으로 교체 
+bookingNaver: http://bit.ly/3JVYQBH
 
 footer:
   전화: 02-392-5252
