--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -12,12 +12,14 @@ ko:
       body: 서울 마포구 월드컵북로 11길 20
     문의:
       title: 문의
-      body: 02-392-5252
+      body: 
+      - Tel  02-392-5252
+      - E-mail  museum@womenandwar.net
     안내:
       title: 안내
       body:
-      - 전쟁과여성인권박물관은 코로나19로 인하여 사전 예약제를 운영 (* 예약 시간대에만 입장 가능)
-      - 시간 당 관람 인원을 30명으로 제한합니다. (*선착순 마감)
+      - 전쟁과여성인권박물관은 원할한 관람을 위해 사전 예약제를 운영 (* 예약 시간대에만 입장 가능)
+      - 시간 당 예약관람 인원을 50명으로 제한합니다. (*선착순 마감)
       - 오디오 가이드[한국어, 영어, 일어] 제공 (*별도의 교육이나 전시 설명은 진행하지 않습니다)
     오시는길:
       지하철:
@@ -391,25 +393,25 @@ ko:
             - 건물 리모델링 공사 착공식                                                                                                                                                                 
 en: 
   관람안내:
-    title: Visit
+    title: Online Reservation Information
     개관일:
-      title: Opening Hours
+      title: Opening
       body: Tue-Sat, 10am-6pm (*Admission closed at 5pm)
     휴관일:
       title: Closed
-      body: Sun-Mon
+      body: every Sunday and Monday, New Year's Day, Chuseok holiday, Lunar New Year holidays, Christmas
     주소:
       title: Address
       body: 20 Worldcupbuk-ro 11-gil Mapo-gu Seoul
     문의:
       title: Contact
-      body: 02-392-5252
+      body: 82-2-392-5252, museum@womenandwar.net
     안내:
       title: Information
       body:
-      - 1. Due to COVID-19, the War and Women’s Human Rights Museum is accepting visitors on a reservation-only basis. (*You can only enter during the time slot you booked)
-      - 2. The maximum number of visitors is limited to 30 people per hour (*first-come, first-serve basis)
-      - 3. Audio guide [Korean, English, Japanese] is provided
+      - 1. The War and Women's Human Rights Museum operates a reservation system for smooth viewing. ( * You can only enter during the reserved time period.)
+      - 2. Reservations are limited to 50 people per hour. (* Closed on a first-come, first-served basis)
+      - 3. Audio guide [Korean, English, Japanese] provided. (* Separate education or exhibition explanations are not conducted)
     오시는길:
       지하철:
         title: Subway
@@ -740,13 +742,17 @@ en:
             - Remodeling started          
 jp: 
   관람안내:
-    title: 博物館のご利用案内
+    title: オンライン予約のご案内
+    body:
+    - この度は当博物館にご関心をお寄せいただきありがとうございます。
+    - ご来館をご希望される場合、Googleフォームにてご予約の申し込みをお願い致します。
+    - ご予約に先立ち、以下のご案内を必ずお読みください。
     개관일:
       title: 開館日
-      body: 火-土、午前10時から午後6時まで  (*入館は閉館の1時間前まで)
+      body: 火～土　午前10時～午後6時（最終入場：午後5時)
     휴관일:
       title: 休館日
-      body: 日-月、祝日
+      body: 日・月、1月1日、チュソク、旧正月、12月25日
     주소:
       title: 住  所
       body: ソウル市 麻浦区 ワールドカップ北路 11ギル 20
