영문, 일문 방문신청 링크를 교체합니다.

--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -19,7 +19,9 @@ featuredImages:
   - image2.jpg
 
 #2023년4월4일 구글폼으로 교체 
-bookingNaver: http://bit.ly/3JVYQBH
+bookingNaver: https://booking.naver.com/booking/6/bizes/596312
+bookingForEnglish: http://bit.ly/3JVYQBH
+bookingForJapanese: http://bit.ly/3lX1XRU
 
 footer:
   전화: 02-392-5252
