일어관람 가이드 페이지 및 텍스트를 수정합니다.

--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -18,7 +18,7 @@ ko:
     안내:
       title: 안내
       body:
-      - 전쟁과여성인권박물관은 원할한 관람을 위해 사전 예약제를 운영 (* 예약 시간대에만 입장 가능)
+      - 전쟁과여성인권박물관은 원활한 관람을 위해 사전 예약제를 운영 (* 예약 시간대에만 입장 가능)
       - 시간 당 예약관람 인원을 50명으로 제한합니다. (*선착순 마감)
       - 오디오 가이드[한국어, 영어, 일어] 제공 (*별도의 교육이나 전시 설명은 진행하지 않습니다)
     오시는길:
@@ -743,29 +743,41 @@ en:
 jp: 
   관람안내:
     title: オンライン予約のご案内
-    body:
+    body_1:
     - この度は当博物館にご関心をお寄せいただきありがとうございます。
     - ご来館をご希望される場合、Googleフォームにてご予約の申し込みをお願い致します。
+    body_2:
     - ご予約に先立ち、以下のご案内を必ずお読みください。
     개관일:
       title: 開館日
-      body: 火～土　午前10時～午後6時（最終入場：午後5時)
+      body: "○ 開館日 ： 火～土　午前10時～午後6時（最終入場：午後5時）"
     휴관일:
       title: 休館日
-      body: 日・月、1月1日、チュソク、旧正月、12月25日
+      body: "○ 休館日 : 日・月、1月1日、チュソク、旧正月、12月25日"
     주소:
-      title: 住  所
-      body: ソウル市 麻浦区 ワールドカップ北路 11ギル 20
+      title: 住所
+      body: "○ 住所 : ソウル市 麻浦区 ワールドカップ北路 11ギル 20"
+    body_3:
+    - ○ 当博物館では円滑な観覧のため、事前予約生を運営しています。（＊ご予約された時間帯のみ入場可能）
+    - ○ 時間あたり予約できる人数は50名上限です（＊先着〆）   
+    - ○ オーディオ・ガイド（韓国語・英語・日本語）提供（＊別途の教育や展示説明は行っておりません） 
     문의:
       title: お問い合わせ
-      body: 02-392-5252
+      body: 
+      - お問い合わせ
+      - ご予約およびご不明な点がございましたら以下の連絡先までお問い合わせください
+      contact:
+      - "○ TEL ： +82) 2-392-5252"
+      - "○ E-mail : museum@womenandwar.net"
     안내:
       title: 案    内
-      body:
-      - 戦争と女性の人権博物館は新型コロナウィルスにより、事前予約制で運営しております。
-        (* ご予約時に指定された時間帯のみ入場可能です。)
-      - 各時間帯の観覧人数を30名までに制限しております。(*先着順締め切り)
-      - 音声ガイド[韓国語、英語、日本語]提供
+      body_1:
+      - 戦争と女性の人権博物館では円滑な観覧のため、事前予約制を運営しております。(* ご予約された時間帯のみ入場可能です)
+      - 予約人数は時間帯ごと５０名上限です。(*先着順で〆)
+      - オーディオ・ガイド（韓国語、英語、日本語）提供 (*別途の教育や展示の説明は行っておりません。)
+      - 観覧可能な時間は毎週火曜～土曜午前10時から午後６時までです。 (*最終入場：午後５時)
+      body_2:
+      - "お問い合わせ : 82-2-392-5252 (戦争と女性の人権博物館)"
     오시는길:
       지하철:
         title: アクセス
@@ -777,7 +789,7 @@ jp:
         body:
         - 7013A/B、7711、7016、7737番バス →  景城(キョンソン)中高・弘大付属女子中高入口下車
         - マウルバス<マポ(麻浦)15><マポ(麻浦)08> → 景城(キョンソン)中高サゴリ(交差点)下車
-        - ※専用駐車場はありませんので公共交通機関をご利用ください。        
+        - ※専用駐車場はありませんので公共交通機関をご利用ください。     
   온라인예약안내: 
     title: オンライン予約のご案内
     body_1: 
@@ -801,12 +813,20 @@ jp:
   온라인예약이동: オンライン予約
 
   소식참여:
-    title: 博物館支援
+    title: ご支援のお願い
     일시후원신청하기:
-      title: 博物館支援
+      여는글:
+        body_1:
+        - 女性と人権の博物館は、日本軍「慰安婦」サバイバーの歴史を記憶し、日本軍「慰安婦」問題解決に向けて活動している空間です。
+        - なお、現在も起こりつづけている戦争と女性に対する暴力をなくすため、連帯し行動しています。
+        body_2:
+        - このような活動は、みなさまのご支援で成り立っています。
+        body_3:
+        - 性暴力のない世界を作るための様々な活動をぜひ支えてください。
+      title: ご支援のお願い
       body:
-      - "日本口座：郵便振替 00170-6-266644 (名義：女性人権博物館）"
-      - "韓国口座：国民銀行 069101-04-194282 (名義：戦争と女性の人権博物館）"  
+      - "日本口座 ： 郵便振替 00170-6-266644 (名義：女性人権博物館）"
+      - "韓国へ直接ご支援を希望される場合、E-mailにてお問い合わせください museum@womenandwar.net"
 
   박물관소개:
     title: 博物館の紹介
