--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -3,7 +3,7 @@ ko:
     title: 관람안내
     개관일:
       title: 개관일
-      body: 화-토, 오전 10시부터 오후 6시까지 (*오후 5시 입장 마감)
+      body: 화-토, 오전 10시부터 오후 6시까지 (*오후 5시 입장 마감))
     휴관일:
       title: 휴관일
       body: 일-월, 1/1
