--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -6,7 +6,7 @@ ko:
       body: 화-토, 오전 10시부터 오후 6시까지 (*오후 5시 입장 마감)
     휴관일:
       title: 휴관일
-      body: 일-월, 1/1
+      body: 일-월, 1/1, 설날 연휴, 추석 
     주소:
       title: 주소
       body: 서울 마포구 월드컵북로 11길 20
