관람안내 교육

--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -20,7 +20,8 @@ ko:
       body:
       - 전쟁과여성인권박물관은 원활한 관람을 위해 사전 예약제를 운영 (* 예약 시간대에만 입장 가능)
       - 시간 당 예약관람 인원을 50명으로 제한합니다. (*선착순 마감)
-      - 오디오 가이드[한국어, 영어, 일어] 제공 (*별도의 교육이나 전시 설명은 진행하지 않습니다)
+      - 오디오 가이드[한국어, 영어, 일어] 제공 
+      - 원활한 관람을 위해 단체 관람의 경우, 사전에 예약을 받습니다. 미리 문의해 주시면 별도의 교육도 가능합니다.
     오시는길:
       지하철:
         title: 지하철
