--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -6,7 +6,7 @@ ko:
       body: 화-토, 오전 10시부터 오후 6시까지 (*오후 5시 입장 마감)
     휴관일:
       title: 휴관일
-      body: 일-월, 1/1, 설 연휴, 추석 연휴
+      body: 일-월, 1/1, 설 연휴, 추석 연휴, 성탄절
     주소:
       title: 주소
       body: 서울 마포구 월드컵북로 11길 20
@@ -18,10 +18,8 @@ ko:
     안내:
       title: 안내
       body:
-      - 전쟁과여성인권박물관은 원활한 관람을 위해 사전 예약제를 운영 (* 예약 시간대에만 입장 가능)
-      - 시간 당 예약관람 인원을 50명으로 제한합니다. (*선착순 마감)
-      - 오디오 가이드[한국어, 영어, 일어] 제공 
-      - 원활한 관람을 위해 단체 관람의 경우, 사전에 예약을 받습니다. 미리 문의해 주시면 별도의 교육도 가능합니다.
+      - 원활한 관람을 위해 단체 관람의 경우, 사전 예약 필요 (미리 문의시 별도의 교육 가능)
+      - 오디오 가이드[한국어, 영어, 일어] 제공
     오시는길:
       지하철:
         title: 지하철
