--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -51,7 +51,7 @@ collections:
       - { label: '대표이미지', name: 'featured', widget: 'image', required: false }
       - label: "세부사진목록"
         name: "components"
-        widget: "list"
+        widget: "image"
         required: false
         media_library:
           config:
